# Aurogon

./: CMakeLists.txt  LICENSE  README.md  arg  argument_details  ifconfig  killall.sh  mul_test.sh  mul_test2.sh  run.sh  see_result.sh  start.sh  watch.sh
codes/: GT_center.cpp  GT_master.cpp  Makefile  arg  clock_sync.cpp  clock_sync.h  config.cpp  config.h  global.cpp  global.h  gt_center  ifconfig  main.cpp  rc_ts.cpp  rc_ts.h  rdma.cpp  rdma.h  rdma_ts.cpp  rdma_ts.h  sock.cpp  sock.h  start.sh  svm.cpp  svm.h  table.cpp  table.h  test_lock.cpp  thread.cpp  thread.h  tpcc.cpp  tpcc.h  txn.cpp  txn.h  ud_ts.cpp  ud_ts.cpp.old  ud_ts.h  ud_ts.h.old  util.cpp  util.h
